// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputSelect > should render as required 1`] = `
<div>
  <div
    data-input-select=""
  >
    <select
      required=""
      rtl="true"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        foo
      </option>
      <option
        aria-current="false"
        value="1"
      >
        bar
      </option>
      <option
        aria-current="false"
        value="2"
      >
        baz
      </option>
      <!---->
    </select>
     
    <span>
      <i
        class="selector-closed"
      />
    </span>
  </div>
  
</div>
`;

exports[`InputSelect > should render as required 2`] = `
<div>
  <div
    data-input-select=""
  >
    <select
      rtl="false"
    >
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        foo
      </option>
      <option
        aria-current="false"
        value="1"
      >
        bar
      </option>
      <option
        aria-current="false"
        value="2"
      >
        baz
      </option>
      <!---->
    </select>
     
    <span>
      <i
        class="selector-closed"
      />
    </span>
  </div>
  
</div>
`;

exports[`InputSelect > should render with objects  1`] = `
<div>
  <div
    data-input-select=""
  >
    <select>
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        foo
      </option>
      <option
        aria-current="true"
        value="1"
      >
        bar
      </option>
      <option
        aria-current="false"
        value="2"
      >
        baz
      </option>
      <!---->
    </select>
     
    <span>
      <i
        class="selector-closed"
      />
    </span>
  </div>
  
</div>
`;

exports[`InputSelect > should render with string options 1`] = `
<div>
  <div
    data-input-select=""
  >
    <select>
      <!---->
      <option
        aria-current="true"
        value="0"
      >
        foo
      </option>
      <option
        aria-current="false"
        value="1"
      >
        bar
      </option>
      <option
        aria-current="false"
        value="2"
      >
        baz
      </option>
      <!---->
    </select>
     
    <span>
      <i
        class="selector-closed"
      />
    </span>
  </div>
  
</div>
`;

exports[`InputSelect > should render with string options 2`] = `
<div>
  <div
    data-input-select=""
  >
    <select>
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        foo
      </option>
      <option
        aria-current="false"
        value="1"
      >
        bar
      </option>
      <option
        aria-current="true"
        value="2"
      >
        baz
      </option>
      <option
        aria-current="false"
        value="3"
      >
        qux
      </option>
      <!---->
    </select>
     
    <span>
      <i
        class="selector-opened"
      />
    </span>
  </div>
  
</div>
`;

exports[`InputSelect > should render with text, value objects  1`] = `
<div>
  <div
    data-input-select=""
  >
    <select>
      <!---->
      <option
        aria-current="false"
        value="0"
      >
        foo
      </option>
      <option
        aria-current="false"
        value="1"
      >
        bar
      </option>
      <option
        aria-current="false"
        value="2"
      >
        baz
      </option>
      <!---->
    </select>
     
    <span>
      <i
        class="selector-closed"
      />
    </span>
  </div>
  
</div>
`;
